* 2014-01-21 - marc.arens@open-xchange.com

 - Fix for bug 30737: Proper null check and test case

* 2014-01-21 - martin.herfurth@open-xchange.com

 - Fix for bug 30738: Avoid NPE.

* 2014-01-21 - thorben.betten@open-xchange.com

 - Second fix for bug 30684: Ensure IMAP-IDLE push listener is gracefully shut-down on permanent authentication failures
 - Fix for bug 30739: Added null guard to avoid NPE and enhanced affected routine by some logging to detect what went wrong
 - Fix for bug 30680: Support for several bogus "Content-Disposition" header values

* 2014-01-20 - thorben.betten@open-xchange.com

 - Fix for bug 30721: Explicitly connect when retrieving an account's root folder

* 2014-01-20 - marcus.klein@open-xchange.com

 - Fix for bug 23480: Set autoReconnect for MySQL JDBC connections to false. Changed exception handling in database pooling to fall back to
   master without throwing an exception to the calling code.

* 2014-01-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 30716: Evaluate more detailed permissions when checking if folder deletion is allowed 

* 2014-01-17 - marc.arens@open-xchange.com

 - Fix for bug 30540: Fix race condition in grizzly framework
 
* 2014-01-17 - thorben.betten@open-xchange.com

 - Fix for bug 30671: Fetch a cloned version of the CapabilitySet from "Capabilities" cache

* 2014-01-16 - martin.schneider@open-xchange.com

 - Fix for bug 30534: Cleaned up and fixed usage of MAX_UPLOAD_SIZE parameter.

* 2014-01-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 30641: Recognize "FF D8 FF E2" byte signature as JPEG image

* 2014-01-15 - steffen.templin@open-xchange.com

 - Fix for bug 30441: Fixed resource cache to avoid flooding the file storage with unreferenced files.

* 2014-01-15 - thorben.betten@open-xchange.com

 - Fix for bug 30643: Don't conflict with same folder on duplicate check

* 2014-01-15 - tobias.friedrich@open-xchange.com
