@@ -1,3 +1,7 @@
+* 2014-01-22 - thorben.betten@open-xchange.com
+
+ - Fix for bug 29367: Filter already contained messages from E-Mail conversation thread
+
 * 2014-01-21 - marc.arens@open-xchange.com
 
  - Fix for bug 30737: Proper null check and test case
